@@ -2,6 +2,7 @@ version 0.9.4+
 	* Added debug mode
 	* Even better map.reduce.map using blocked access
 	* Python 3 support
+	* Make sqlite3 a soft dependency for ``status --cache``
 
 version 0.9.4 Mon Apr 15 2013 by luispedro
 	* Add CustomHash wrapper to set __jug_hash__
